--- a/public/bower.json
+++ b/public/bower.json
@@ -18,6 +18,7 @@
     "navigo": "^4.7.0",
     "jquery": "^3.2.1",
     "handlebars": "^4.0.5",
-    "crypto-js": "^3.1.9"
+    "crypto-js": "^3.1.9",
+    "bootstrap": "^3.3.7"
   }
 }
