--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "test",
+  "name": "Forkstare",
   "version": "1.0.0",
-  "description": "",
+  "description": "for educational purposes only",
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "bootstrap": "^3.3.7",
+    "chai": "^3.5.0",
     "crypto-js": "^3.1.9-1",
     "express": "^4.15.2",
     "handlebars": "^4.0.6",
     "jquery": "^3.2.1",
     "lowdb": "^0.16.2",
+    "mocha": "^3.3.0",    
     "navigo": "^4.7.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node node_modules/mocha/bin/mocha unit_tests/mocha-tests.js -c",
     "start": "node app.js"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "gremlins",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/georgievayo/JavaScriptApplications-Teamwork-GremlinTeam"
+  }
 }
