--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lowdb": "^0.16.2",
     "mocha": "^3.3.0",
     "navigo": "^4.7.0",
-    "sinon": "^2.2.0"
+    "sinon": "^2.2.0",
+    "toastr": "^2.1.2"
   },
   "devDependencies": {},
   "scripts": {
