--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mocha": "^3.3.0",
     "navigo": "^4.7.0",
     "sinon": "^2.2.0",
-    "toastr": "^2.1.2"
+    "toastr": "^2.1.2",
+    "winston": "^2.3.1"
   },
   "devDependencies": {},
   "scripts": {
